# study_project

./: .gitignore
yolov8/: CMakeLists.txt  gen_wts.py
yolov8/src/: model.cpp
yolov8_test2/: CMakeLists.txt  block.cpp  block.h  config.h  main.cpp  model.cpp  yololayer.cu  yololayer.h
yolov8_test3/: 2.txt  CMakeLists.txt  main.cpp  tree.json
yolov8_test3/include/: block.h  config.h  cuda_utils.h  model.h
yolov8_test3/plugin/: yololayer.cu  yololayer.h
yolov8_test3/src/: block.cpp  model.cpp
yolov8_test4_explicit/include/: config.h  model.h  types.h
yolov8_test4_explicit/plugin/: yoloplugin.cu  yoloplugin.h
yolov8_test4_explicit/src/: block.cpp  model.cpp
